@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.0
 
+	- Added new filter_value() methods to Fl_File_Chooser to
+	  get and set the current file filters.
+	- Added support for custom filters to Fl_File_Chooser.
 	- Added Borland C++ Builder IDE project files from
 	  Alexey Parshin.
 	- Resource leak fixes under WIN32 from Ori Berger.
